# fastapi-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
fastapi_demo/api/routers/: product_api.py  user_api.py
fastapi_demo/api/schemas/: msg.py  product.py  user.py
fastapi_demo/config/: config.py
fastapi_demo/orm/: connection.py
fastapi_demo/orm/dao/: product_dao.py  user_dao.py
fastapi_demo/orm/models/: product.py  user.py
fastapi_demo/services/: user_service.py
scripts/: create_table.py
tests/orm/: test_user_dao.py
tests/services/: test_user_service.py
